# HanazonoLite-webfont

./: .gitignore  README.md  pyproject.toml
.github/: generate-woff2.yml
Gothic/: HanaGothLiteA1HK.css  HanaGothLiteA1JP.css  HanaGothLiteA1KR.css  HanaGothLiteA1SC.css  HanaGothLiteA1TC.css  HanaGothLiteA1VN.css  HanaGothLiteA2HK.css  HanaGothLiteA2JP.css  HanaGothLiteA2KR.css  HanaGothLiteA2SC.css  HanaGothLiteA2TC.css  HanaGothLiteA2VN.css  HanaGothLiteAHK.css  HanaGothLiteAJP.css  HanaGothLiteAKR.css  HanaGothLiteASC.css  HanaGothLiteATC.css  HanaGothLiteAVN.css  HanaGothLiteBHK.css  HanaGothLiteBJP.css  HanaGothLiteBKR.css  HanaGothLiteBSC.css  HanaGothLiteBTC.css  HanaGothLiteBVN.css  HanaGothLiteCHK.css  HanaGothLiteCJKA1HK.css  HanaGothLiteCJKA1JP.css  HanaGothLiteCJKA1KR.css  HanaGothLiteCJKA1SC.css  HanaGothLiteCJKA1TC.css  HanaGothLiteCJKA1VN.css  HanaGothLiteCJKA2HK.css  HanaGothLiteCJKA2JP.css  HanaGothLiteCJKA2KR.css  HanaGothLiteCJKA2SC.css  HanaGothLiteCJKA2TC.css  HanaGothLiteCJKA2VN.css  HanaGothLiteCJKAHK.css  HanaGothLiteCJKAJP.css  HanaGothLiteCJKAKR.css  (+57 more)
Mincho/: HanaMinLiteA1HK.css  HanaMinLiteA1JP.css  HanaMinLiteA1KR.css  HanaMinLiteA1SC.css  HanaMinLiteA1TC.css  HanaMinLiteA1VN.css  HanaMinLiteA2HK.css  HanaMinLiteA2JP.css  HanaMinLiteA2KR.css  HanaMinLiteA2SC.css  HanaMinLiteA2TC.css  HanaMinLiteA2VN.css  HanaMinLiteAHK.css  HanaMinLiteAJP.css  HanaMinLiteAKR.css  HanaMinLiteASC.css  HanaMinLiteATC.css  HanaMinLiteAVN.css  HanaMinLiteBHK.css  HanaMinLiteBJP.css  HanaMinLiteBKR.css  HanaMinLiteBSC.css  HanaMinLiteBTC.css  HanaMinLiteBVN.css  (+71 more)
(+39 files in other folders)
