[tool.poetry]
name = "hanazono-lite-webfont-gen"
version = "0.1.0"
description = ""
authors = ["Bryan Kok <bryan.wyern1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
driver = "hanazono_lite_webfont_gen.driver:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
